@@ -5,6 +5,7 @@
   * Add global evaluate_block($block, $arguments = array()) method
   * Refactor EnumerableMethods
   * Make EnumerableMethods class abstract
+  * Add Enumerable#inject and refactor global evaluate_block
 
 2009-03-12 - Sean Huber (shuber@huberry.com)
   * Update README
